# amigo

./: LICENSE  Profile_hdf5.py  README.md  amigo_py.yml  compute_rotation.py  demo_plot_pattern.py  forward_modelling.py  gmode_series.py  observations.py  pyproject.toml  readme.md  readme.txt  stellar_model.py
amigo/: asymptotic_theory.py  centrifugal_TAR.py  compute_rotation.py  fit.py  grid.py  observations.py  stellar_model.py
demo/: kepler03228863_spacings.amigo
test/: test_modelling.py  test_pattern.py
tutorials/tutorial3_fitting-sparse-patterns/: HD112429_spacings.amigo
tutorials/tutorial4_uniform-rotation-gmodes/: tutorial4_uniform-rotation-gmodes.py
tutorials/tutorial5_uniform-rotation-rmodes/: tutorial5_uniform-rotation-rmodes.py
tutorials/tutorial6_differentially-rotating-models/: M150Z0140_fov150_Xc50.data.GYRE  tutorial6_differentially-rotating-models.py
tutorials/tutorial7_centrifugal-acceleration/: tutorial7_centrifugal-acceleration.py
