[tool.poetry]
name = "amigo"
version = "0.1.0"
description = ""
authors = ["Timothy Van Reeth <timothy.vanreeth@kuleuven.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.13"
scipy = "^1.11.2"
lmfit = "^1.2.2"
astropy = "^5.3.3"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
h5py = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
